--- a/src/content/champions/daniel-vaughan.yaml
+++ b/src/content/champions/daniel-vaughan.yaml
@@ -38,7 +38,7 @@ activities:
     subtype: other
     dateFrom: 2023-09-14
     dateTo: 2023-09-14
-    title: Organising (venue)
+    title: Organizing (venue)
     description: Hosting Green London green code workshop
     url: https://www.meetup.com/gsf-london/events/295976027/
     relatedEvent: Code Green London - Green Coding Workshop
@@ -56,7 +56,7 @@ activities:
     subtype: green-software-meetup
     dateFrom: 2023-03-03
     dateTo: 2023-03-03
-    title: Organising (venue)
+    title: Organizing (venue)
     description: Inaugural Green Software Foundation London meetup
     url: https://www.meetup.com/gsf-london/events/292217696/
     relatedEvent: Green Software Foundation London Meetup March
