--- a/src/content/champions/pindy-bhullar.yaml
+++ b/src/content/champions/pindy-bhullar.yaml
@@ -7,7 +7,7 @@ languages:
   - Punjai
 pronoun: She/Her
 country: United Kingdom
-city: Potters Bar
+city: London
 bio: Technologist and change leader with over twenty years’ experience driving efficiency and enhancing performance for global leader in investment banking. Possesses extensive knowledge of IT architecture and systems, programme and project leadership in business transformation, with particular expertise in building sustainable technology solutions and infrastructure in the drive for net zero.
 type: normal
 social:
