Updating profile for Asim Hussain

--- a/src/content/champions/asim-hussain.yaml
+++ b/src/content/champions/asim-hussain.yaml
@@ -14,7 +14,7 @@ social:
   linkedin: jawache
   twitter: jawache
 activities:
-  - contributionType: speaking
+  - contributionType: writings
     linkedGSFProject: Speakers
     subtype: conference-talk
     dateFrom: 2019-12-05
